Your update description

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Contact Book</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 <body onload="fetchContacts()">
     <div class="page-container">
@@ -25,7 +25,7 @@
         </div>
     </div>
 
-    <script src="config.js"></script>
+    <script src="public/js/config.js"></script>
     <script>
         document.getElementById("refresh").addEventListener("click", fetchContacts);
         document.getElementById("addContact").addEventListener("click", function() {
