Initial upload: Contact Book app with CRUD features

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         }
 
         function editContact(id) {
-            window.location.href = "edit-contact.html?id=" + id;
+            window.location.href = "src/components/edit-contact.html?id=" + id;
         }
     </script>
 </body>
