fixed broken paths

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <script>
         document.getElementById("refresh").addEventListener("click", fetchContacts);
         document.getElementById("addContact").addEventListener("click", function() {
-            window.location.href = "add-contact.html";
+            window.location.href = "src/components/add-contact.html";
         });
 
         function fetchContacts() {
